fixed class names, made resurrection page visible

--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ hr {
     box-shadow: 0px 0px 15px var(--nord4); 
 }
 
+.viewing {
+    color: var(--nord7)
+}
+
 .title {
     margin-left: 0.5em;
     margin-right: 0.5em;
@@ -96,7 +100,7 @@ hr {
     box-shadow: 0px 0px 15px var(--nord3); 
 }
 
-.resurrection {
+.red {
     margin-left: 0.5em;
     margin-right: 0.5em;
     background-color: var(--nord11);
@@ -128,7 +132,7 @@ img.resurrection-sc {
     box-shadow: 0px 0px 15px black;
 }
 
-.watcher {
+.orange {
     margin-left: 0.5em;
     margin-right: 0.5em;
     background-color: var(--nord12);
@@ -147,7 +151,7 @@ img.watcher-sc {
     padding-left: 50px;
 }
 
-.website {
+.green {
     margin-left: 0.5em;
     margin-right: 0.5em;
     background-color: var(--nord14);
@@ -155,5 +159,29 @@ img.watcher-sc {
     padding: 10px 50px 20px 50px;
     box-shadow: 0px 0px 15px var(--nord14);
     color: var(--nord0);
+}
+
+a:link {
+  color: var(--nord10);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: var(--nord10);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--nord8);
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: var(--nord15);
+  background-color: transparent;
+  text-decoration: none;
 }
 
